--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,9 @@ layout: archive
 ---
 
 {{ content }}
+<h2 id="welcome">Welcome</h2>
+
+<p>Personal site with stuff that I like related to research and life..</p>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
