--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -197,6 +197,13 @@ $text-alignments: left, right, start, end, center, justify;
   .fal {
     color: $text-color;
   }
+  .fa-bluesky {
+    color: #1f88fe;
+  }
+  .fa-researchgate {
+    color: #18d2b1;
+  }
+
 
   @each $color, $icons in (
     $behance-color: ".fa-behance, .fa-behance-square",
@@ -210,7 +217,7 @@ $text-alignments: left, right, start, end, center, justify;
     $instagram-color: ".fa-instagram",
     $keybase-color: ".fa-keybase",
     $lastfm-color: ".fa-lastfm, .fa-lastfm-square",
-    $linkedin-color: ".fa-linkedin, .fa-linkedin-in",
+    $linkedin-color: ".fa-linkedin, .fa-linkedin-in, .fa-brands fa-linkedin",
     $mastodon-color: ".fa-mastodon, .fa-mastodon-square",
     $pinterest-color: ".fa-pinterest, .fa-pinterest-p, .fa-pinterest-square",
     $reddit-color: ".fa-reddit",
