--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,9 +3,12 @@ layout: archive
 ---
 
 {{ content }}
-<h2 id="welcome">Welcome</h2>
+<h2 id="welcome">Hello!</h2>
 
-<p>Personal site with stuff related to research and life in general.</p>
+<p>
+  Welcome to my personal page. 
+  It is meant to provide some udpates on my research, R tutorials & code, and blog posts about things I enjoy!</p>
+
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
