--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,16 @@
 ---
 layout: archive
+header:
+  image: /assets/images/beech_forest2.png
+author_profile: true
+entries_layout: grid
 ---
 
 {{ content }}
-<h2 id="welcome">Hello!</h2>
-
+<h3 id="welcome">Hello!</h3>
 <p>
   Welcome to my personal page. 
-  It is meant to provide some udpates on my research, R tutorials & code, and blog posts about things I enjoy!</p>
-
+  It is meant to provide some udpates on my research, R tutorials & code, and blog posts about things I enjoy</p>
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
